<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/friendly_name"
        android:background="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@mipmap/jiosplash" />

    <EditText
        android:id="@+id/filled_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/friendly_name_hint"
        android:inputType="textPersonName"
        android:text="@string/friendly_name_hint" />

    <RelativeLayout
        android:id="@+id/relbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp">

        <Button
            android:id="@+id/button_key"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/button_round_background"
            android:text="@string/friendly_key" />

        <Button
            android:id="@+id/button_wallet"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_round_background"
            android:layout_toEndOf="@id/button_key"
            android:text="@string/friendly_wallet" />

        <Button
            android:id="@+id/button_laptops"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/button_wallet"
            android:background="@drawable/button_round_background"
            android:text="@string/friendly_laptops" />

        <Button
            android:id="@+id/button_suitcase"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/button_key"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_round_background"
            android:text="@string/friendly_suitcase" />

        <Button
            android:id="@+id/button_satchel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignTop="@id/button_suitcase"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_round_background"
            android:layout_toEndOf="@id/button_suitcase"
            android:text="@string/friendly_satchel" />

        <Button
            android:id="@+id/button_others"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignTop="@id/button_suitcase"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_round_background"
            android:layout_toEndOf="@id/button_satchel"
            android:text="@string/friendly_others" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_round_background"
            android:layout_below="@+id/button_satchel"
            android:layout_alignStart="@id/button_satchel"
            android:text="@string/friendly_finish" />
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_round_background"
            android:layout_alignStart="@id/button_finish"
            android:layout_below="@id/button_finish"
            android:text="@string/friendly_cancel" />
    </RelativeLayout>
</LinearLayout>