<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/jiopermissions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/adddevice_heading_height"
    android:background="@color/cardviewlayout_device_background_color"
    app:ignore="NamespaceTypo">
    <!-- Header aligned to top -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/cardviewlayout_device_background_color"
        android:id="@+id/jiopermissions_appheader"
        android:gravity="center">

        <TextView
            android:id="@+id/jiopermissions_app_header_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/adddevice_heading_height"
            android:text="@string/jiopermissions_app_header_str"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/adddevice_heading_font_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/jiopermissions_header"
        android:layout_below="@id/jiopermissions_appheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/adddevice_heading_height"
        android:layout_marginRight="@dimen/adddevice_heading_height"
        android:paddingBottom="@dimen/twenty_dp"
        android:background="@drawable/dialog_round_background">

        <TextView
            android:id="@+id/jiopermissions_before_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:text="@string/jiopermissions_before_activate_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/adddevice_heading_font_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_bt"
            android:layout_below="@+id/jiopermissions_before_activate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/permissions_content_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_bt_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_bt_details"
            android:layout_below="@+id/jiopermissions_turnon_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_bt_details_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_bt_details_enable"
            android:layout_below="@+id/jiopermissions_turnon_bt_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_bt_details_enable_text"
            android:textColor="@color/lite_blue"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_location"
            android:layout_below="@+id/jiopermissions_turnon_bt_details_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_location_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_location_details"
            android:layout_below="@+id/jiopermissions_turnon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_location_details_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_location_details_enable"
            android:layout_below="@+id/jiopermissions_turnon_location_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_location_details_enable_text"
            android:textColor="@color/lite_blue"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>


        <Button
            android:id="@+id/jiopermissions_next"
            android:layout_width="@dimen/adddevice_button_width"
            android:layout_height="@dimen/adddevice_button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/fourty_dp"
            android:background="@drawable/button_frame_blue"
            android:text="@string/jiopermissions_next_text"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/seventeen_sp" />

    </RelativeLayout>
</RelativeLayout>