<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardviewlayout_device_background_color"
    android:paddingBottom="@dimen/adddevice_heading_height"
    app:ignore="NamespaceTypo">
    <!-- Header aligned to top -->
    <RelativeLayout
        android:id="@+id/login_appheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/cardviewlayout_device_background_color"
        android:gravity="center">

        <TextView
            android:id="@+id/login_app_header_text_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/login_sms_otp_header_text"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/adddevice_heading_font_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_appheader"
        android:layout_marginLeft="@dimen/adddevice_heading_height"
        android:layout_marginRight="@dimen/adddevice_heading_height"
        android:background="@drawable/dialog_round_background"
        android:gravity="center"
        android:paddingBottom="@dimen/twenty_dp">

        <ImageView
            android:id="@+id/login_img_location_otp"
            android:layout_width="@dimen/margin_100dp"
            android:layout_height="@dimen/margin_100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_26"
            android:layout_marginBottom="@dimen/five_dp"
            android:src="@drawable/smsotp" />

        <TextView
            android:id="@+id/login_jioTags_text_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_img_location_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:gravity="center"
            android:text="@string/login_sms_otp_sent"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/login_jioTags_enter_number_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_jioTags_text_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center"
            android:textColor="#666666"
            android:textSize="@dimen/seventeen_sp"
            android:text="@string/login_sms_otp_sent_to"></TextView>

        <TextView
            android:id="@+id/login_jioTags_registered_otp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_11sp"
            android:layout_below="@+id/login_jioTags_enter_number_otp"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/dip_58"
            android:gravity="left"
            android:text="@string/login_btn_enter_otp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_10dp"></TextView>
        <TextView
            android:id="@+id/login_resend_otp"
            android:layout_below="@+id/login_jioTags_enter_number_otp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dip_58"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_resend_otp"
            android:layout_alignBaseline="@+id/login_edit_number"
            android:clickable="true"
            android:textColor="#00B5B4"
            android:textSize="@dimen/fourteen_sp">
        </TextView>

        <EditText
            android:id="@+id/login_edit_number"
            android:layout_width="@dimen/margin_130"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_jioTags_registered_otp"
            android:background="@android:color/transparent"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:maxLength="6"
            android:inputType="number"
            android:textColor="#000000"
            android:text=""></EditText>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/eigh_dp"
            android:layout_alignStart="@+id/login_jioTags_registered_otp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_below="@+id/login_edit_number"
            android:background="@color/lite_blue"
            android:layout_height="3dp">
        </View>

        <TextView
            android:id="@+id/login_otp_textid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_btn_otp"
            android:layout_below="@+id/login_edit_number"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_alignStart="@+id/login_btn_otp"
            android:layout_alignEnd="@id/login_resend_otp"
            android:text="@string/login_otp_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/sixteen_sp" />


        <Button
            android:id="@+id/login_btn_otp"
            android:layout_width="@dimen/adddevice_button_width"
            android:layout_height="@dimen/adddevice_button_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/adddevice_button_margin_bottom"
            android:background="@drawable/button_frame_blue"
            android:text="@string/login_btn_otp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/adddevice_content_font_size" />

    </RelativeLayout>
</RelativeLayout>