<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notfound_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardviewlayout_device_background_color"
    android:paddingBottom="@dimen/adddevice_heading_height"
    app:ignore="NamespaceTypo">
    <!-- Header aligned to top -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/cardviewlayout_device_background_color"
        android:id="@+id/notfound_appheader"
        android:gravity="center">

        <TextView
            android:id="@+id/notfound_app_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notfound_heading"
            android:fontFamily="Bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/title_layout"
            android:layout_marginLeft="@dimen/title_layout"
            android:layout_marginRight="@dimen/title_layout"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/twenty_sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notfound_header"
        android:layout_below="@id/notfound_appheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty_five_dp"
        android:layout_marginRight="@dimen/twenty_five_dp"
        android:paddingBottom="@dimen/twenty_dp"
        android:background="@drawable/dialog_round_background">

        <TextView
            android:id="@+id/notfound_attach_jio_finder_Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/notfound_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/notfound_attach_jio_finder_steps"
            android:layout_below="@+id/notfound_attach_jio_finder_Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fourty_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/notfound_steps"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/notfound_attach_jio_finder_steps_detail"
            android:layout_below="@+id/notfound_attach_jio_finder_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fourty_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/notfound_step_details"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/notfound_btn_search_devices"
            android:layout_width="@dimen/adddevice_button_width"
            android:layout_height="@dimen/adddevice_button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/fourty_dp"
            android:layout_marginRight="@dimen/fourty_dp"
            android:layout_marginBottom="@dimen/fourty_dp"
            android:background="@drawable/button_frame_blue"
            android:text="Try again"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/seventeen_sp" />

    </RelativeLayout>
</RelativeLayout>